--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+    
         {
-            "name": "Python: getDocTest.py",
+            "name": "Python: test-printer.py",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": true,
+            "args":["-t","'Hello World'","-f","OpenSansBold"],
+            "sudo": true
         }
     ]
 }
